Adicionando notebook para criacao dos datasets de treino, validacao e teste

--- a/1-annotation/ner-annotation-skweak.ipynb
+++ b/1-annotation/ner-annotation-skweak.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Named Entities annotation using weak supervision"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,7 +86,7 @@
     "id": "5qnWO_Gl5DSw"
    },
    "source": [
-    "# Carregando Dados"
+    "## Carregando Dados"
    ]
   },
   {
@@ -162,7 +164,7 @@
     "id": "0IZVplXlmO28"
    },
    "source": [
-    "# Skweak\n",
+    "## Skweak\n",
     "\n",
     "* https://aclanthology.org/2021.acl-demo.40.pdf\n",
     "\n",
@@ -219,16 +221,17 @@
     "id": "On6XRMLz3ta_"
    },
    "source": [
-    "# Funções"
+    "## Funções"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "rusk3WBF4AU-"
+    "id": "rusk3WBF4AU-",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Money"
+    "### Money"
    ]
   },
   {
@@ -313,10 +316,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "shnXZz4a4Kjw"
+    "id": "shnXZz4a4Kjw",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Percentual"
+    "### Percentual"
    ]
   },
   {
@@ -370,10 +374,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "14Ey-4EZoRR_"
+    "id": "14Ey-4EZoRR_",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Regex"
+    "### Regex"
    ]
   },
   {
@@ -414,10 +419,11 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "iciSWRiT3pMD"
+    "id": "iciSWRiT3pMD",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "# Completo"
+    "## Completo"
    ]
   },
   {
@@ -665,7 +671,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "fb_bY72u0Ct2"
+    "id": "fb_bY72u0Ct2",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "## Analisando dados puros e anotados\n",
@@ -784,7 +791,7 @@
     "id": "lrb9Tinnava6"
    },
    "source": [
-    "# Salvando dados no formato do Doccano"
+    "## Salvando dados no formato do Doccano"
    ]
   },
   {
@@ -853,7 +860,7 @@
     "id": "zSE0PmIgvyas"
    },
    "source": [
-    "# Carregando dados do Doccano"
+    "## Carregando dados do Doccano"
    ]
   },
   {
@@ -1132,173 +1139,6 @@
    "outputs": [],
    "source": [
     "df_sents_anot.to_csv(folder_processados+'/sentencas-anotadas-doccano.csv', sep=';', index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "HSYrV2gr4BGL"
-   },
-   "source": [
-    "# Testes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "HYiorU6-S-nL"
-   },
-   "outputs": [],
-   "source": [
-    "combined = base.CombinedAnnotator()\n",
-    "#combined.add_annotator(money_detector)\n",
-    "#combined.add_annotator(money)\n",
-    "#combined.add_annotator(percent)\n",
-    "#combined.add_annotator(quarter)\n",
-    "#combined.add_annotator(semester)\n",
-    "combined.add_annotator(year)\n",
-    "#combined.add_annotator(gaz)\n",
-    "\n",
-    "p = 'Paraná Banco - Teleconferência primeiro trimestre 1T de 2009 – 08/05/2009 Operadora: Bom dia.'\n",
-    "doc = nlp(p)\n",
-    "\n",
-    "docs = list(combined.pipe(doc))\n",
-    "utils.display_entities(doc, \"rotulos\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "_gYug1XcGDVM"
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "gaz = gazetteers.GazetteerAnnotator('rotulos', rotulos)\n",
-    "\n",
-    "#nlp = spacy.load(spacy_model, disable=[\"ner\", \"lemmatizer\"])\n",
-    "nlp = spacy.load(spacy_model)\n",
-    "\n",
-    "#p = dataset[11]\n",
-    "p = 'Paraná Banco - Teleconferência primeiro trimestre 1T de 2009 – 08/05/2009 Operadora: Bom dia.'\n",
-    "print(p)\n",
-    "\n",
-    "doc = nlp(p)\n",
-    "docs = gaz(doc)\n",
-    "\n",
-    "for d in docs[:20]:\n",
-    "    print()\n",
-    "    utils.display_entities(d, layer='*')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "Epe77GBPNSv8"
-   },
-   "outputs": [],
-   "source": [
-    "gaz = gazetteers.GazetteerAnnotator('rotulos', rotulos)\n",
-    "\n",
-    "#nlp = spacy.load(spacy_model, disable=[\"ner\", \"lemmatizer\"])\n",
-    "\n",
-    "for i, p in enumerate(dataset):\n",
-    "    t = f\"\\n{i} - {p}\"\n",
-    "    print(t)\n",
-    "    # apply the labelling functions\n",
-    "    doc = nlp(p)\n",
-    "    doc = gaz(doc)\n",
-    "\n",
-    "    utils.display_entities(doc, \"rotulos\")\n",
-    "\n",
-    "    for ent in doc.ents:\n",
-    "      e = f\"{ent.text} - {ent.label_}\"\n",
-    "      print(e)\n",
-    "\n",
-    "    #utils.display_entities(doc)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "mqzUlydcAVku"
-   },
-   "outputs": [],
-   "source": [
-    "'''\n",
-    "docs = []\n",
-    "for i, p in enumerate(dataset[:15]):\n",
-    "    #t = f\"\\n{i} - {p}\"\n",
-    "    #print(t)\n",
-    "    # apply the labelling functions\n",
-    "    doc = nlp(p)\n",
-    "    doc = money(doc)\n",
-    "    doc = percent(doc)\n",
-    "    doc = quarter(doc)\n",
-    "    doc = semester(doc)\n",
-    "    doc = year(doc)\n",
-    "    doc = gaz(doc)\n",
-    "    #doc = ner_model(doc)\n",
-    "\n",
-    "    docs.append(doc)\n",
-    "    utils.display_entities(doc, 'hmm')\n",
-    "    #for ent in doc.ents:\n",
-    "    #  e = f\"{ent.text} - {ent.label_}\"\n",
-    "    #  print(e)\n",
-    "\n",
-    "\n",
-    "# and aggregate them\n",
-    "hmm  = aggregation.HMM('hmm', ['PER', 'LOC', 'ORG', 'MISC', 'COND_MACRO', 'YEAR', 'QUARTER', 'MONEY', 'SEMESTER', 'PERCENTUAL'])\n",
-    "docs = hmm.fit_and_aggregate(docs)\n",
-    "\n",
-    "for i, doc in enumerate(docs):\n",
-    "  print(f\"{i}\")\n",
-    "  utils.display_entities(doc, 'hmm')\n",
-    "'''\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "P9shlyiQoXrE"
-   },
-   "outputs": [],
-   "source": [
-    "suffixes = list(nlp.Defaults.suffixes)\n",
-    "suffixes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "G-LFa-_2nynY"
-   },
-   "outputs": [],
-   "source": [
-    "nlp.Defaults.suffixes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "z44IMsYjoI1m"
-   },
-   "outputs": [],
-   "source": [
-    "suffixes = list(nlp.Defaults.suffixes)\n",
-    "suffixes.remove('(?<=[0-9])(?:km|km²|km³|m|m²|m³|dm|dm²|dm³|cm|cm²|cm³|mm|mm²|mm³|ha|µm|nm|yd|in|ft|kg|g|mg|µg|t|lb|oz|m/s|km/h|kmh|mph|hPa|Pa|mbar|mb|MB|kb|KB|gb|GB|tb|TB|T|G|M|K|%|км|км²|км³|м|м²|м³|дм|дм²|дм³|см|см²|см³|мм|мм²|мм³|нм|кг|г|мг|м/с|км/ч|кПа|Па|мбар|Кб|КБ|кб|Мб|МБ|мб|Гб|ГБ|гб|Тб|ТБ|тбكم|كم²|كم³|م|م²|م³|سم|سم²|سم³|مم|مم²|مم³|كم|غرام|جرام|جم|كغ|ملغ|كوب|اكواب)')\n",
-    "print(suffixes)\n",
-    "suffix_regex = spacy.util.compile_suffix_regex(suffixes)\n",
-    "nlp.tokenizer.suffix_search = suffix_regex.search"
    ]
   }
  ],
