--- a/1-annotation/ner-annotation-skweak.ipynb
+++ b/1-annotation/ner-annotation-skweak.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instalando bibliotecas"
+    "## Instalando pacotes"
    ]
   },
   {
