Adicionando notebook para preparação dos dados e para o fine-tuning do modelos baseados no T5

--- a/3-fine-tuning/0-bert/1-bert-fine-tuning-and-evaluation.ipynb
+++ b/3-fine-tuning/0-bert/1-bert-fine-tuning-and-evaluation.ipynb
@@ -636,7 +636,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Carregando dados das predições para cálculo das métricas"
+    "### Cálculo das métricas"
    ]
   },
   {
@@ -689,7 +689,6 @@
     "\n",
     "refs = []\n",
     "for tags in ner_tags.tolist():\n",
-    "#for tags in ner_tags:\n",
     "    refs.append( [ int2label[tag] for tag in tags if tag != -100 ] )\n",
     "\n",
     "preds = []\n",
